--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-# Ignore output files
-Estimation/*.xlsx
-Estimation/*.csv
-!Estimation/*.png
-*.xlsx
-*.csv
-
 # Ignore Jupyter
 *.ipynb
 .ipynb_checkpoints/
@@ -21,3 +14,6 @@ env/
 
 # Ignore VSCode settings (optional)
 .vscode/
+
+# Ignore macOS system files
+.DS_Store
